--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,39 +9,51 @@
   "orientation": "any",
   "icons": [
   {
-    "purpose": "maskable",
+    "purpose": "any",
     "sizes": "48x48",
     "src": "/icons/maskable_icon_x48.png",
     "type": "image/png"
   },
   {
-    "purpose": "maskable",
+    "purpose": "any",
     "sizes": "72x72",
     "src": "/icons/maskable_icon_x72.png",
     "type": "image/png"
   },
   {
-    "purpose": "maskable",
+    "purpose": "any",
     "sizes": "96x96",
     "src": "/icons/maskable_icon_x96.png",
     "type": "image/png"
   },
   {
-    "purpose": "maskable",
+    "purpose": "any",
     "sizes": "128x128",
     "src": "/icons/maskable_icon_x128.png",
+    "type": "image/png"
+  },
+  {
+    "purpose": "any",
+    "sizes": "192x192",
+    "src": "/icons/maskable_icon_x192.png",
+    "type": "image/png"
+  },
+  {
+    "purpose": "any",
+    "sizes": "384x384",
+    "src": "/icons/maskable_icon_x384.png",
+    "type": "image/png"
+  },
+  {
+    "purpose": "any",
+    "sizes": "512x512",
+    "src": "/icons/maskable_icon_x512.png",
     "type": "image/png"
   },
   {
     "purpose": "maskable",
     "sizes": "192x192",
     "src": "/icons/maskable_icon_x192.png",
-    "type": "image/png"
-  },
-  {
-    "purpose": "maskable",
-    "sizes": "384x384",
-    "src": "/icons/maskable_icon_x384.png",
     "type": "image/png"
   },
   {
